# libjpeg

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wanglei/libjpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: jconfig.h
app/src/main/java/com/wanglei/libjpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wanglei/libjpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
